iac/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mds-service
spec:
  type: LoadBalancer
  selector:
    app: mds-restapi
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
